@@ -1,5 +1,6 @@
 package com.gitb.engine.actors.processors;
 
+import com.gitb.tdl.*;
 import org.apache.pekko.actor.ActorRef;
 import com.gitb.core.ErrorCode;
 import com.gitb.core.StepStatus;
@@ -11,10 +12,6 @@ import com.gitb.engine.testcase.TestCaseContext;
 import com.gitb.engine.testcase.TestCaseScope;
 import com.gitb.engine.utils.TestCaseUtils;
 import com.gitb.exceptions.GITBEngineInternalError;
-import com.gitb.tdl.Binding;
-import com.gitb.tdl.CallStep;
-import com.gitb.tdl.Scriptlet;
-import com.gitb.tdl.Variable;
 import com.gitb.types.DataType;
 import com.gitb.types.DataTypeFactory;
 import com.gitb.types.MapType;
@@ -29,8 +26,6 @@ import org.slf4j.MarkerFactory;
 import java.util.*;
 
 /**
- * Created by serbay on 9/15/14.
- *
  * Call step executor actor
  */
 public class CallStepProcessorActor extends AbstractTestStepActor<CallStep> {
@@ -87,7 +82,7 @@ public class CallStepProcessorActor extends AbstractTestStepActor<CallStep> {
 			for (var output: step.getOutput()) {
 				if (StringUtils.isNotBlank(output.getName())) {
 					if (specificOutputsToReturn.contains(output.getName())) {
-						LOG.warn(MarkerFactory.getDetachedMarker(scope.getContext().getSessionId()), String.format("Ignoring duplicate output [%s] - step [%s] - ID [%s]", output.getName(), TestCaseUtils.extractStepDescription(step, childScope), stepId));
+						LOG.warn(MarkerFactory.getDetachedMarker(scope.getContext().getSessionId()), "%s: Ignoring duplicate output [%s]".formatted(getScriptletErrorDescription(false), output.getName()));
 					} else {
 						specificOutputsToReturn.add(output.getName());
 					}
@@ -101,11 +96,11 @@ public class CallStepProcessorActor extends AbstractTestStepActor<CallStep> {
 					DataType result;
 					if (StringUtils.isBlank(output.getValue())) {
 						if (output.getName() == null) {
-							throw new GITBEngineInternalError(ErrorUtils.errorInfo(ErrorCode.INVALID_TEST_CASE, String.format("Scriptlet outputs must either define an expression or be provided with a name to match a variable in the scriptlet's scope - step [%s] - ID [%s]", TestCaseUtils.extractStepDescription(step, childScope), stepId)));
+							throw new GITBEngineInternalError(ErrorUtils.errorInfo(ErrorCode.INVALID_TEST_CASE, "%s: Scriptlet outputs must either define an expression or be provided with a name to match a variable in the scriptlet's scope.".formatted(getScriptletErrorDescription())));
 						} else {
 							TestCaseScope.ScopedVariable variable = childScope.getVariable(output.getName());
 							if (variable == null) {
-								throw new GITBEngineInternalError(ErrorUtils.errorInfo(ErrorCode.INVALID_TEST_CASE, String.format("Scriptlet output [%s] must either define an expression or match a variable in the scriptlet's scope - step [%s] - ID [%s]", output.getName(), TestCaseUtils.extractStepDescription(step, childScope), stepId)));
+								throw new GITBEngineInternalError(ErrorUtils.errorInfo(ErrorCode.INVALID_TEST_CASE, "%s: Scriptlet output [%s] must either define an expression or match a variable in the scriptlet's scope.".formatted(getScriptletErrorDescription(), output.getName())));
 							}
 							result = variable.getValue();
 						}
@@ -119,7 +114,7 @@ public class CallStepProcessorActor extends AbstractTestStepActor<CallStep> {
 			// Log a warning for any expected outputs that were not returned.
 			specificOutputsToReturn.removeAll(elements.keySet());
 			for (var unhandledOutput: specificOutputsToReturn) {
-				LOG.warn(MarkerFactory.getDetachedMarker(scope.getContext().getSessionId()), String.format("Requested output [%s] not found in the scriptlet's outputs - step [%s] - ID [%s]", unhandledOutput, TestCaseUtils.extractStepDescription(step, childScope), stepId));
+				LOG.warn(MarkerFactory.getDetachedMarker(scope.getContext().getSessionId()), "%s: Requested output [%s] not found in the scriptlet's outputs".formatted(getScriptletErrorDescription(false), unhandledOutput));
 			}
 			if (step.getId() != null) {
 				setOutputMap(elements, step.getId());
@@ -144,7 +139,7 @@ public class CallStepProcessorActor extends AbstractTestStepActor<CallStep> {
 	private MapType createOutputMap(Map<String, DataType> elements) {
 		MapType outputs = new MapType();
 		for (Map.Entry<String, DataType> entry : elements.entrySet()) {
-			if (!entry.getKey().equals("")) {
+			if (!entry.getKey().isEmpty()) {
 				outputs.addItem(entry.getKey(), entry.getValue());
 			}
 		}
@@ -183,7 +178,7 @@ public class CallStepProcessorActor extends AbstractTestStepActor<CallStep> {
 						value = new StringType(step.getInputAttribute());
 					}
 					value = value.convertTo(variable.getType());
-					setContextVariable(childScope, value, null, variable);
+					setContextVariable(childScope, value, variable.getName());
 					parameters.remove(variable.getName());
 				}
 			} else {
@@ -193,7 +188,7 @@ public class CallStepProcessorActor extends AbstractTestStepActor<CallStep> {
 					step.getInput().forEach(input -> parameters.remove(input.getName()));
 				} else {
 					if (step.getInput().size() != scriptlet.getParams().getVar().size()) {
-						throw new GITBEngineInternalError(ErrorUtils.errorInfo(ErrorCode.INVALID_TEST_CASE, "Wrong number of parameters for scriptlet ["+scriptlet.getId()+"]. Expected ["+scriptlet.getParams().getVar().size()+"] but encountered ["+step.getInput().size()+"]."));
+						throw new GITBEngineInternalError(ErrorUtils.errorInfo(ErrorCode.INVALID_TEST_CASE, "%s: Wrong number of parameters. Expected [%s] but encountered [%s].".formatted(getScriptletErrorDescription(), scriptlet.getParams().getVar().size(), step.getInput().size())));
 					}
 					setInputWithIndexBinding(childScope);
 					parameters.clear();
@@ -201,14 +196,21 @@ public class CallStepProcessorActor extends AbstractTestStepActor<CallStep> {
 			}
 			if (!parameters.isEmpty()) {
 				// Consider also default values for parameters.
-				scriptlet.getParams().getVar().forEach(variable -> {
-					if (parameters.contains(variable.getName()) && !variable.getValue().isEmpty()) {
-						setContextVariable(childScope, DataTypeFactory.getInstance().create(variable), null, variable);
-						parameters.remove(variable.getName());
+				scriptlet.getParams().getVar().forEach(parameter -> {
+					if (parameters.contains(parameter.getName())) {
+						if (parameter.isDefaultEmpty()) {
+							setContextVariable(childScope, DataTypeFactory.getInstance().create(parameter.getType()), parameter.getName());
+							parameters.remove(parameter.getName());
+						} else if (!parameter.getValue().isEmpty()) {
+							setContextVariable(childScope, DataTypeFactory.getInstance().create(parameter), parameter.getName());
+							parameters.remove(parameter.getName());
+						}
 					}
 				});
+				// Remove optional parameters that have no provided values.
+				scriptlet.getParams().getVar().stream().filter(InputParameter::isOptional).map(Variable::getName).toList().forEach(parameters::remove);
 				if (!parameters.isEmpty()) {
-					throw new GITBEngineInternalError(ErrorUtils.errorInfo(ErrorCode.INVALID_TEST_CASE, String.format("All scriptlet parameters must either be provided explicitly via call inputs or have default values. No values could be determined for parameters [%s].", StringUtils.join(parameters, ", "))));
+					throw new GITBEngineInternalError(ErrorUtils.errorInfo(ErrorCode.INVALID_TEST_CASE, String.format("%s: All required scriptlet parameters must either be provided explicitly via call inputs or have default values. No values could be determined for parameters [%s].", getScriptletErrorDescription(), StringUtils.join(parameters, ", "))));
 				}
 			}
 		}
@@ -223,6 +225,28 @@ public class CallStepProcessorActor extends AbstractTestStepActor<CallStep> {
 			childScope
 				.createVariable(output.getName());
 		}
+	}
+
+	private String getScriptletErrorDescription() {
+		return getScriptletErrorDescription(true);
+	}
+
+	private String getScriptletErrorDescription(boolean isError) {
+		var message = new StringBuilder();
+		if (isError) {
+			message.append("Error");
+		} else {
+			message.append("Warning");
+		}
+		message.append(" in call step");
+		if (StringUtils.isNotBlank(step.getId())) {
+			message.append(" with ID [%s]".formatted(step.getId()));
+		}
+		message.append(" for scriptlet with ID [%s] at path [%s]".formatted(scriptlet.getId(), step.getPath()));
+		if (StringUtils.isNotBlank(step.getFrom())) {
+			message.append(" from test suite [%s]".formatted(step.getFrom()));
+		}
+		return message.toString();
 	}
 
 	private void setInputWithIndexBinding(TestCaseScope childScope) {
@@ -258,9 +282,9 @@ public class CallStepProcessorActor extends AbstractTestStepActor<CallStep> {
 			Set<String> expectedInputs = new TreeSet<>();
 			scriptlet.getParams().getVar().forEach((v) -> expectedInputs.add(v.getName()));
 			if (expectedInputs.isEmpty()) {
-				throw new GITBEngineInternalError(ErrorUtils.errorInfo(ErrorCode.INVALID_TEST_CASE, "Scriptlet was called with an unexpected input ["+name+"]. No inputs were expected to be provided."));
+				throw new GITBEngineInternalError(ErrorUtils.errorInfo(ErrorCode.INVALID_TEST_CASE, "%s: Scriptlet was called with an unexpected input [%s]. No inputs were expected to be provided.".formatted(getScriptletErrorDescription(), name)));
 			} else {
-				throw new GITBEngineInternalError(ErrorUtils.errorInfo(ErrorCode.INVALID_TEST_CASE, "Scriptlet was called with an unexpected input ["+name+"]. The scriptlet expected the following inputs ["+ String.join("|", expectedInputs) +"]."));
+				throw new GITBEngineInternalError(ErrorUtils.errorInfo(ErrorCode.INVALID_TEST_CASE, "%s: Scriptlet was called with an unexpected input [%s]. The scriptlet expected the following inputs [%s].".formatted(getScriptletErrorDescription(), name, String.join("|", expectedInputs))));
 			}
 		}
 		return variable;
@@ -270,15 +294,15 @@ public class CallStepProcessorActor extends AbstractTestStepActor<CallStep> {
 		DataType resolvedValue = expressionHandler.processExpression(input, variable.getType());
 		DataType valueToSet = DataTypeFactory.getInstance().create(variable.getType());
 		valueToSet.copyFrom(resolvedValue, variable.getType());
-		setContextVariable(childScope, valueToSet, input.getName(), variable);
+		String name = input.getName();
+		if (name == null) {
+			name = variable.getName();
+		}
+		setContextVariable(childScope, valueToSet, name);
 	}
 
-	private void setContextVariable(TestCaseScope childScope, DataType value, String variableName, Variable variable) {
-		if (variableName == null) {
-			childScope.createVariable(variable.getName()).setValue(value);
-		} else {
-			childScope.createVariable(variableName).setValue(value);
-		}
+	private void setContextVariable(TestCaseScope childScope, DataType value, String variableName) {
+		childScope.createVariable(variableName).setValue(value);
 	}
 
 	public static ActorRef create(ActorContext context, CallStep step, TestCaseScope scope, String stepId) throws Exception {
